syntax = "proto3";
package pb;

option go_package = "github.com/snple/beacon/pb;pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

// NSON 值的通用表示（支持递归结构）
message NsonValue {
  uint32 type = 1;  // nson.DataType 类型码
  oneof value {
    bool bool_value = 2;           // 0x01: BOOL
    google.protobuf.NullValue null_value = 3;  // 0x02: NULL
    float float_value = 4;         // 0x11: F32
    double double_value = 5;       // 0x12: F64
    int32 int32_value = 6;         // 0x13/0x17/0x19: I32/I8/I16
    int64 int64_value = 7;         // 0x14: I64
    uint32 uint32_value = 8;       // 0x15/0x18/0x1A: U32/U8/U16
    uint64 uint64_value = 9;       // 0x16: U64
    string string_value = 10;      // 0x21: STRING
    bytes binary_value = 11;       // 0x22: BINARY
    NsonArray array_value = 12;    // 0x31: ARRAY
    NsonMap map_value = 13;        // 0x32: MAP
    google.protobuf.Timestamp timestamp_value = 14; // 0x41: TIMESTAMP
    bytes id_value = 15;           // 0x42: ID (12 bytes)
  }
}

// NSON 数组（递归定义）
message NsonArray {
  repeated NsonValue values = 1;
}

// NSON 映射（递归定义）
message NsonMap {
  map<string, NsonValue> entries = 1;
}
